--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,23 @@
  */
 
  @import "bulma";
+
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
+
+ .navbar-brand .title {
+   color: white;
+ }
+
+
+ .image {
+   border-radius: 50%;
+   img {
+     border-radius: 50%;
+   }
+ }
+
+ .notifications:not(:last-child) {
+   margin-bottom: 0;
+ }
+
