--- a/app/views/tweeets/_form.html.erb
+++ b/app/views/tweeets/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: tweeet) do |form| %>
-  <% if tweeet.errors.any? %>
+<%= form_with(model: @tweeet) do |form| %>
+  <% if @tweeet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(tweeet.errors.count, "error") %> prohibited this tweeet from being saved:</h2>
 
       <ul>
-        <% tweeet.errors.each do |error| %>
+        <% @tweeet.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
