--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%# <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css' %> 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     
   </head>
@@ -36,18 +35,39 @@
           <span></span>
         </div> 
       </div>
-    </nav>
+  
 
-    <div class="navbarExample" class="navbar-menu">
+    <div id="navbarExample" class="navbar-menu">
       <div class="navbar-end">
+              <div class="navbar-item">
         <div class="field is-grouped">
           <p class="control">
-            <% link_to 'New Tweeet', new_tweeet_path, class: "button is-info is-inverted"%>
+            <%= link_to 'New Tweeet', new_tweeet_path, class: "button is-info is-inverted"%>
           </p>
+
+          <% if user_signed_in? %>
+            <p class="control">
+              <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
+            </p>
+            <p>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "button is-info"%>
+            </p>
+          <% else %>
+            <p class="control">
+              <%= link_to 'Sign In', new_user_session_path, class: "button is-info" %>
+            </p>
+
+            <p class="control">
+              <%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %>
+            </p>
+          <% end %>
+          
+        
+          </div>
         </div>
       </div>
     </div>
-
+  </nav>
     <%= yield %>
   </body>
 </html>
