--- a/app/views/tweeets/_form.html.erb
+++ b/app/views/tweeets/_form.html.erb
@@ -2,7 +2,7 @@
 <%= f.error_notification %>
 <div class="field">
   <div class="control">
-    <%= f.input :tweeet, label: "Tweet about it", input_html: { class: "textarea" }, wrapper: false, label_html: { class: "label" }, placeholder: "Compose new tweeet..." %>
+    <%= f.input :tweeet, label: "Tweet about it", input_html: { class: "textarea" }, wrapper: false, label_html: { class: "label" }, placeholder: "Compose new tweeet...", autofocus: true%>
   </div>
 </div>
 
